--- a/1. Read Data.ipynb
+++ b/1. Read Data.ipynb
@@ -121,53 +121,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>2020-04-03</td>\n",
+       "      <th>336</th>\n",
+       "      <td>2020-04-04</td>\n",
        "      <td>Lothian</td>\n",
-       "      <td>408</td>\n",
-       "      <td>19535</td>\n",
-       "      <td>3001</td>\n",
-       "      <td>172</td>\n",
+       "      <td>476</td>\n",
+       "      <td>20798</td>\n",
+       "      <td>3345</td>\n",
+       "      <td>218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>2020-04-03</td>\n",
+       "      <th>337</th>\n",
+       "      <td>2020-04-04</td>\n",
        "      <td>Orkney</td>\n",
-       "      <td>2</td>\n",
-       "      <td>19535</td>\n",
-       "      <td>3001</td>\n",
-       "      <td>172</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20798</td>\n",
+       "      <td>3345</td>\n",
+       "      <td>218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>2020-04-03</td>\n",
+       "      <th>338</th>\n",
+       "      <td>2020-04-04</td>\n",
        "      <td>Shetland</td>\n",
-       "      <td>36</td>\n",
-       "      <td>19535</td>\n",
-       "      <td>3001</td>\n",
-       "      <td>172</td>\n",
+       "      <td>40</td>\n",
+       "      <td>20798</td>\n",
+       "      <td>3345</td>\n",
+       "      <td>218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>325</th>\n",
-       "      <td>2020-04-03</td>\n",
+       "      <th>339</th>\n",
+       "      <td>2020-04-04</td>\n",
        "      <td>Tayside</td>\n",
-       "      <td>353</td>\n",
-       "      <td>19535</td>\n",
-       "      <td>3001</td>\n",
-       "      <td>172</td>\n",
+       "      <td>410</td>\n",
+       "      <td>20798</td>\n",
+       "      <td>3345</td>\n",
+       "      <td>218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>326</th>\n",
-       "      <td>2020-04-03</td>\n",
+       "      <th>340</th>\n",
+       "      <td>2020-04-04</td>\n",
        "      <td>Eileanan Siar (Western Isles)</td>\n",
        "      <td>3</td>\n",
-       "      <td>19535</td>\n",
-       "      <td>3001</td>\n",
-       "      <td>172</td>\n",
+       "      <td>20798</td>\n",
+       "      <td>3345</td>\n",
+       "      <td>218</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>327 rows × 6 columns</p>\n",
+       "<p>341 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -178,11 +178,11 @@
        "3   2020-03-06      Greater Glasgow and Clyde                         1   \n",
        "4   2020-03-06                       Grampian                         3   \n",
        "..         ...                            ...                       ...   \n",
-       "322 2020-04-03                        Lothian                       408   \n",
-       "323 2020-04-03                         Orkney                         2   \n",
-       "324 2020-04-03                       Shetland                        36   \n",
-       "325 2020-04-03                        Tayside                       353   \n",
-       "326 2020-04-03  Eileanan Siar (Western Isles)                         3   \n",
+       "336 2020-04-04                        Lothian                       476   \n",
+       "337 2020-04-04                         Orkney                         4   \n",
+       "338 2020-04-04                       Shetland                        40   \n",
+       "339 2020-04-04                        Tayside                       410   \n",
+       "340 2020-04-04  Eileanan Siar (Western Isles)                         3   \n",
        "\n",
        "     Total Tests  Total Positive Cases  Total Deaths  \n",
        "0           1514                    11             0  \n",
@@ -191,13 +191,13 @@
        "3           1514                    11             0  \n",
        "4           1514                    11             0  \n",
        "..           ...                   ...           ...  \n",
-       "322        19535                  3001           172  \n",
-       "323        19535                  3001           172  \n",
-       "324        19535                  3001           172  \n",
-       "325        19535                  3001           172  \n",
-       "326        19535                  3001           172  \n",
+       "336        20798                  3345           218  \n",
+       "337        20798                  3345           218  \n",
+       "338        20798                  3345           218  \n",
+       "339        20798                  3345           218  \n",
+       "340        20798                  3345           218  \n",
        "\n",
-       "[327 rows x 6 columns]"
+       "[341 rows x 6 columns]"
       ]
      },
      "execution_count": 4,
@@ -224,22 +224,22 @@
     {
      "data": {
       "text/plain": [
-       "Grampian                         29\n",
-       "Tayside                          29\n",
-       "Lothian                          29\n",
-       "Greater Glasgow and Clyde        29\n",
-       "Fife                             29\n",
-       "Forth Valley                     29\n",
-       "Lanarkshire                      28\n",
-       "Shetland                         26\n",
-       "Borders                          24\n",
-       "Highland                         21\n",
+       "Forth Valley                     30\n",
+       "Greater Glasgow and Clyde        30\n",
+       "Fife                             30\n",
+       "Lothian                          30\n",
+       "Tayside                          30\n",
+       "Grampian                         30\n",
+       "Lanarkshire                      29\n",
+       "Shetland                         27\n",
+       "Borders                          25\n",
+       "Highland                         22\n",
        "Ayrshire and Arran               20\n",
-       "Dumfries and Galloway            19\n",
-       "Ayrshire and Arran                6\n",
-       "Eileanan Siar (Western Isles)     3\n",
+       "Dumfries and Galloway            20\n",
+       "Ayrshire and Arran                7\n",
+       "Orkney                            4\n",
+       "Eileanan Siar (Western Isles)     4\n",
        "Ayrshire & Arran                  3\n",
-       "Orkney                            3\n",
        "Name: Health Board, dtype: int64"
       ]
      },
@@ -273,20 +273,20 @@
     {
      "data": {
       "text/plain": [
-       "Grampian                         29\n",
-       "Tayside                          29\n",
-       "Lothian                          29\n",
-       "Greater Glasgow and Clyde        29\n",
-       "Ayrshire and Arran               29\n",
-       "Fife                             29\n",
-       "Forth Valley                     29\n",
-       "Lanarkshire                      28\n",
-       "Shetland                         26\n",
-       "Borders                          24\n",
-       "Highland                         21\n",
-       "Dumfries and Galloway            19\n",
-       "Eileanan Siar (Western Isles)     3\n",
-       "Orkney                            3\n",
+       "Ayrshire and Arran               30\n",
+       "Forth Valley                     30\n",
+       "Greater Glasgow and Clyde        30\n",
+       "Fife                             30\n",
+       "Lothian                          30\n",
+       "Tayside                          30\n",
+       "Grampian                         30\n",
+       "Lanarkshire                      29\n",
+       "Shetland                         27\n",
+       "Borders                          25\n",
+       "Highland                         22\n",
+       "Dumfries and Galloway            20\n",
+       "Orkney                            4\n",
+       "Eileanan Siar (Western Isles)     4\n",
        "Name: Health Board, dtype: int64"
       ]
      },
@@ -389,7 +389,7 @@
        "               '2020-03-22', '2020-03-23', '2020-03-24', '2020-03-25',\n",
        "               '2020-03-26', '2020-03-27', '2020-03-28', '2020-03-29',\n",
        "               '2020-03-30', '2020-03-31', '2020-04-01', '2020-04-02',\n",
-       "               '2020-04-03'],\n",
+       "               '2020-04-03', '2020-04-04'],\n",
        "              dtype='datetime64[ns]', name='Date', freq=None)"
       ]
      },
@@ -471,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
