Added confidence intervals on growth rates

--- a/3. Modeling.ipynb
+++ b/3. Modeling.ipynb
@@ -546,24 +546,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confidence intervals of growth rates for each region"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1.13453069, 1.15913146])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ayrshire and Arran : \t [1.20059898 1.2299851 ]\n",
+      "Borders : \t [1.17004387 1.2037025 ]\n",
+      "Dumfries and Galloway : \t [1.17950827 1.22070719]\n",
+      "Fife : \t [1.17377513 1.20162394]\n",
+      "Forth Valley : \t [1.16239227 1.18515223]\n",
+      "Grampian : \t [1.13453069 1.15913146]\n",
+      "Greater Glasgow and Clyde : \t [1.1931531  1.22582354]\n",
+      "Highland : \t [1.16063052 1.19726601]\n",
+      "Lanarkshire : \t [1.17851201 1.19604997]\n",
+      "Lothian : \t [1.16958992 1.1846714 ]\n",
+      "Shetland : \t [1.06247079 1.09130151]\n",
+      "Tayside : \t [1.18989302 1.21457624]\n"
+     ]
     }
    ],
    "source": [
-    "pm.stats.hpd(trace['slope_ind'][:, region_loc['Grampian']])"
+    "for r in regions:\n",
+    "    print(f\"{r} : \\t {pm.stats.hpd(trace['slope_ind'][:, region_loc[r]])}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
