--- a/3. Modeling.ipynb
+++ b/3. Modeling.ipynb
@@ -549,7 +549,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Confidence intervals of growth rates for each region"
+    "Confidence intervals of growth rates for each region.\n",
+    "\n",
+    "(Orkney and Western Isles ommitted due to lack of data)"
    ]
   },
   {
