--- a/1. Read Data.ipynb
+++ b/1. Read Data.ipynb
@@ -28,7 +28,8 @@
     "                   dtype={'Total Tests': 'Int32',\n",
     "                          'Total Positive Cases': 'Int32',\n",
     "                          'Total Deaths': 'Int32'}\n",
-    "                   ).ffill()"
+    "                   ).ffill()\n",
+    "df = df[df['Health Board'] != 'Golden Jubilee National Hospital']"
    ]
   },
   {
@@ -121,53 +122,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>392</th>\n",
-       "      <td>2020-04-08</td>\n",
+       "      <th>421</th>\n",
+       "      <td>2020-04-10</td>\n",
        "      <td>Lothian</td>\n",
-       "      <td>700</td>\n",
-       "      <td>26226</td>\n",
-       "      <td>4565</td>\n",
-       "      <td>366</td>\n",
+       "      <td>799</td>\n",
+       "      <td>28652</td>\n",
+       "      <td>5275</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>2020-04-08</td>\n",
+       "      <th>422</th>\n",
+       "      <td>2020-04-10</td>\n",
        "      <td>Orkney</td>\n",
        "      <td>4</td>\n",
-       "      <td>26226</td>\n",
-       "      <td>4565</td>\n",
-       "      <td>366</td>\n",
+       "      <td>28652</td>\n",
+       "      <td>5275</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>2020-04-08</td>\n",
+       "      <th>423</th>\n",
+       "      <td>2020-04-10</td>\n",
        "      <td>Shetland</td>\n",
        "      <td>43</td>\n",
-       "      <td>26226</td>\n",
-       "      <td>4565</td>\n",
-       "      <td>366</td>\n",
+       "      <td>28652</td>\n",
+       "      <td>5275</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>2020-04-08</td>\n",
+       "      <th>424</th>\n",
+       "      <td>2020-04-10</td>\n",
        "      <td>Tayside</td>\n",
-       "      <td>586</td>\n",
-       "      <td>26226</td>\n",
-       "      <td>4565</td>\n",
-       "      <td>366</td>\n",
+       "      <td>712</td>\n",
+       "      <td>28652</td>\n",
+       "      <td>5275</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>2020-04-08</td>\n",
+       "      <th>425</th>\n",
+       "      <td>2020-04-10</td>\n",
        "      <td>Eileanan Siar (Western Isles)</td>\n",
-       "      <td>4</td>\n",
-       "      <td>26226</td>\n",
-       "      <td>4565</td>\n",
-       "      <td>366</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28652</td>\n",
+       "      <td>5275</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>397 rows × 6 columns</p>\n",
+       "<p>425 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -178,11 +179,11 @@
        "3   2020-03-06      Greater Glasgow and Clyde                         1   \n",
        "4   2020-03-06                       Grampian                         3   \n",
        "..         ...                            ...                       ...   \n",
-       "392 2020-04-08                        Lothian                       700   \n",
-       "393 2020-04-08                         Orkney                         4   \n",
-       "394 2020-04-08                       Shetland                        43   \n",
-       "395 2020-04-08                        Tayside                       586   \n",
-       "396 2020-04-08  Eileanan Siar (Western Isles)                         4   \n",
+       "421 2020-04-10                        Lothian                       799   \n",
+       "422 2020-04-10                         Orkney                         4   \n",
+       "423 2020-04-10                       Shetland                        43   \n",
+       "424 2020-04-10                        Tayside                       712   \n",
+       "425 2020-04-10  Eileanan Siar (Western Isles)                         6   \n",
        "\n",
        "     Total Tests  Total Positive Cases  Total Deaths  \n",
        "0           1514                    11             0  \n",
@@ -191,13 +192,13 @@
        "3           1514                    11             0  \n",
        "4           1514                    11             0  \n",
        "..           ...                   ...           ...  \n",
-       "392        26226                  4565           366  \n",
-       "393        26226                  4565           366  \n",
-       "394        26226                  4565           366  \n",
-       "395        26226                  4565           366  \n",
-       "396        26226                  4565           366  \n",
+       "421        28652                  5275           495  \n",
+       "422        28652                  5275           495  \n",
+       "423        28652                  5275           495  \n",
+       "424        28652                  5275           495  \n",
+       "425        28652                  5275           495  \n",
        "\n",
-       "[397 rows x 6 columns]"
+       "[425 rows x 6 columns]"
       ]
      },
      "execution_count": 4,
@@ -224,21 +225,21 @@
     {
      "data": {
       "text/plain": [
-       "Lothian                          34\n",
-       "Greater Glasgow and Clyde        34\n",
-       "Forth Valley                     34\n",
-       "Fife                             34\n",
-       "Grampian                         34\n",
-       "Tayside                          34\n",
-       "Lanarkshire                      33\n",
-       "Shetland                         31\n",
-       "Borders                          29\n",
-       "Highland                         26\n",
-       "Dumfries and Galloway            24\n",
+       "Tayside                          36\n",
+       "Grampian                         36\n",
+       "Forth Valley                     36\n",
+       "Greater Glasgow and Clyde        36\n",
+       "Fife                             36\n",
+       "Lothian                          36\n",
+       "Lanarkshire                      35\n",
+       "Shetland                         33\n",
+       "Borders                          31\n",
+       "Highland                         28\n",
+       "Dumfries and Galloway            26\n",
        "Ayrshire and Arran               20\n",
-       "Ayrshire and Arran               11\n",
-       "Orkney                            8\n",
-       "Eileanan Siar (Western Isles)     8\n",
+       "Ayrshire and Arran               13\n",
+       "Eileanan Siar (Western Isles)    10\n",
+       "Orkney                           10\n",
        "Ayrshire & Arran                  3\n",
        "Name: Health Board, dtype: int64"
       ]
@@ -273,20 +274,20 @@
     {
      "data": {
       "text/plain": [
-       "Lothian                          34\n",
-       "Greater Glasgow and Clyde        34\n",
-       "Forth Valley                     34\n",
-       "Fife                             34\n",
-       "Grampian                         34\n",
-       "Ayrshire and Arran               34\n",
-       "Tayside                          34\n",
-       "Lanarkshire                      33\n",
-       "Shetland                         31\n",
-       "Borders                          29\n",
-       "Highland                         26\n",
-       "Dumfries and Galloway            24\n",
-       "Orkney                            8\n",
-       "Eileanan Siar (Western Isles)     8\n",
+       "Tayside                          36\n",
+       "Ayrshire and Arran               36\n",
+       "Grampian                         36\n",
+       "Forth Valley                     36\n",
+       "Greater Glasgow and Clyde        36\n",
+       "Fife                             36\n",
+       "Lothian                          36\n",
+       "Lanarkshire                      35\n",
+       "Shetland                         33\n",
+       "Borders                          31\n",
+       "Highland                         28\n",
+       "Dumfries and Galloway            26\n",
+       "Eileanan Siar (Western Isles)    10\n",
+       "Orkney                           10\n",
        "Name: Health Board, dtype: int64"
       ]
      },
@@ -390,7 +391,7 @@
        "               '2020-03-26', '2020-03-27', '2020-03-28', '2020-03-29',\n",
        "               '2020-03-30', '2020-03-31', '2020-04-01', '2020-04-02',\n",
        "               '2020-04-03', '2020-04-04', '2020-04-05', '2020-04-06',\n",
-       "               '2020-04-07', '2020-04-08'],\n",
+       "               '2020-04-07', '2020-04-08', '2020-04-09', '2020-04-10'],\n",
        "              dtype='datetime64[ns]', name='Date', freq=None)"
       ]
      },
