--- a/1. Read Data.ipynb
+++ b/1. Read Data.ipynb
@@ -122,53 +122,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>481</th>\n",
-       "      <td>2020-04-14</td>\n",
+       "      <th>526</th>\n",
+       "      <td>2020-04-17</td>\n",
        "      <td>Lothian</td>\n",
-       "      <td>989</td>\n",
-       "      <td>32855</td>\n",
-       "      <td>6358</td>\n",
-       "      <td>615</td>\n",
+       "      <td>1172</td>\n",
+       "      <td>36637</td>\n",
+       "      <td>7409</td>\n",
+       "      <td>837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>2020-04-14</td>\n",
+       "      <th>527</th>\n",
+       "      <td>2020-04-17</td>\n",
        "      <td>Orkney</td>\n",
        "      <td>5</td>\n",
-       "      <td>32855</td>\n",
-       "      <td>6358</td>\n",
-       "      <td>615</td>\n",
+       "      <td>36637</td>\n",
+       "      <td>7409</td>\n",
+       "      <td>837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>483</th>\n",
-       "      <td>2020-04-14</td>\n",
+       "      <th>528</th>\n",
+       "      <td>2020-04-17</td>\n",
        "      <td>Shetland</td>\n",
        "      <td>45</td>\n",
-       "      <td>32855</td>\n",
-       "      <td>6358</td>\n",
-       "      <td>615</td>\n",
+       "      <td>36637</td>\n",
+       "      <td>7409</td>\n",
+       "      <td>837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>484</th>\n",
-       "      <td>2020-04-14</td>\n",
+       "      <th>529</th>\n",
+       "      <td>2020-04-17</td>\n",
        "      <td>Tayside</td>\n",
-       "      <td>826</td>\n",
-       "      <td>32855</td>\n",
-       "      <td>6358</td>\n",
-       "      <td>615</td>\n",
+       "      <td>979</td>\n",
+       "      <td>36637</td>\n",
+       "      <td>7409</td>\n",
+       "      <td>837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>485</th>\n",
-       "      <td>2020-04-14</td>\n",
+       "      <th>530</th>\n",
+       "      <td>2020-04-17</td>\n",
        "      <td>Eileanan Siar (Western Isles)</td>\n",
        "      <td>6</td>\n",
-       "      <td>32855</td>\n",
-       "      <td>6358</td>\n",
-       "      <td>615</td>\n",
+       "      <td>36637</td>\n",
+       "      <td>7409</td>\n",
+       "      <td>837</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>481 rows × 6 columns</p>\n",
+       "<p>523 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -179,11 +179,11 @@
        "3   2020-03-06      Greater Glasgow and Clyde                         1   \n",
        "4   2020-03-06                       Grampian                         3   \n",
        "..         ...                            ...                       ...   \n",
-       "481 2020-04-14                        Lothian                       989   \n",
-       "482 2020-04-14                         Orkney                         5   \n",
-       "483 2020-04-14                       Shetland                        45   \n",
-       "484 2020-04-14                        Tayside                       826   \n",
-       "485 2020-04-14  Eileanan Siar (Western Isles)                         6   \n",
+       "526 2020-04-17                        Lothian                      1172   \n",
+       "527 2020-04-17                         Orkney                         5   \n",
+       "528 2020-04-17                       Shetland                        45   \n",
+       "529 2020-04-17                        Tayside                       979   \n",
+       "530 2020-04-17  Eileanan Siar (Western Isles)                         6   \n",
        "\n",
        "     Total Tests  Total Positive Cases  Total Deaths  \n",
        "0           1514                    11             0  \n",
@@ -192,13 +192,13 @@
        "3           1514                    11             0  \n",
        "4           1514                    11             0  \n",
        "..           ...                   ...           ...  \n",
-       "481        32855                  6358           615  \n",
-       "482        32855                  6358           615  \n",
-       "483        32855                  6358           615  \n",
-       "484        32855                  6358           615  \n",
-       "485        32855                  6358           615  \n",
+       "526        36637                  7409           837  \n",
+       "527        36637                  7409           837  \n",
+       "528        36637                  7409           837  \n",
+       "529        36637                  7409           837  \n",
+       "530        36637                  7409           837  \n",
        "\n",
-       "[481 rows x 6 columns]"
+       "[523 rows x 6 columns]"
       ]
      },
      "execution_count": 4,
@@ -220,26 +220,28 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Forth Valley                     40\n",
-       "Grampian                         40\n",
-       "Tayside                          40\n",
-       "Greater Glasgow and Clyde        40\n",
-       "Fife                             40\n",
-       "Lothian                          40\n",
-       "Lanarkshire                      39\n",
-       "Shetland                         37\n",
-       "Borders                          35\n",
-       "Highland                         32\n",
-       "Dumfries and Galloway            30\n",
+       "Fife                             43\n",
+       "Greater Glasgow and Clyde        43\n",
+       "Lothian                          43\n",
+       "Grampian                         43\n",
+       "Tayside                          43\n",
+       "Forth Valley                     43\n",
+       "Lanarkshire                      42\n",
+       "Shetland                         40\n",
+       "Borders                          38\n",
+       "Highland                         35\n",
+       "Dumfries and Galloway            33\n",
+       "Ayrshire and Arran               20\n",
        "Ayrshire and Arran               20\n",
-       "Ayrshire and Arran               17\n",
-       "Orkney                           14\n",
-       "Eileanan Siar (Western Isles)    14\n",
+       "Eileanan Siar (Western Isles)    17\n",
+       "Orkney                           17\n",
        "Ayrshire & Arran                  3\n",
        "Name: Health Board, dtype: int64"
       ]
@@ -274,20 +276,20 @@
     {
      "data": {
       "text/plain": [
-       "Forth Valley                     40\n",
-       "Ayrshire and Arran               40\n",
-       "Grampian                         40\n",
-       "Tayside                          40\n",
-       "Greater Glasgow and Clyde        40\n",
-       "Fife                             40\n",
-       "Lothian                          40\n",
-       "Lanarkshire                      39\n",
-       "Shetland                         37\n",
-       "Borders                          35\n",
-       "Highland                         32\n",
-       "Dumfries and Galloway            30\n",
-       "Orkney                           14\n",
-       "Eileanan Siar (Western Isles)    14\n",
+       "Forth Valley                     43\n",
+       "Fife                             43\n",
+       "Greater Glasgow and Clyde        43\n",
+       "Lothian                          43\n",
+       "Grampian                         43\n",
+       "Tayside                          43\n",
+       "Ayrshire and Arran               43\n",
+       "Lanarkshire                      42\n",
+       "Shetland                         40\n",
+       "Borders                          38\n",
+       "Highland                         35\n",
+       "Dumfries and Galloway            33\n",
+       "Eileanan Siar (Western Isles)    17\n",
+       "Orkney                           17\n",
        "Name: Health Board, dtype: int64"
       ]
      },
@@ -392,7 +394,8 @@
        "               '2020-03-30', '2020-03-31', '2020-04-01', '2020-04-02',\n",
        "               '2020-04-03', '2020-04-04', '2020-04-05', '2020-04-06',\n",
        "               '2020-04-07', '2020-04-08', '2020-04-09', '2020-04-10',\n",
-       "               '2020-04-11', '2020-04-12', '2020-04-13', '2020-04-14'],\n",
+       "               '2020-04-11', '2020-04-12', '2020-04-13', '2020-04-14',\n",
+       "               '2020-04-15', '2020-04-16', '2020-04-17'],\n",
        "              dtype='datetime64[ns]', name='Date', freq=None)"
       ]
      },
